--- a/Lecture_3.ipynb
+++ b/Lecture_3.ipynb
@@ -6,7 +6,7 @@
       "name": "Lecture_3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOVAqOYdwll/YXKCrf1jMME",
+      "authorship_tag": "ABX9TyPeMkNbyWduZGOpJx+JKgPk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Lecture 03: Python Data Types and conditional Programming\n",
+        "# Lecture 03: Python Data Types and String Manipulation\n",
         "Instructor:\n",
         "Md Shahidullah Kawsar,\n",
         "Data Scientist, IDARE, Houston, TX, USA\n",
@@ -165,7 +165,7 @@
       "cell_type": "markdown",
       "source": [
         "#### String Manipulation\n",
-        "1. How to capitalize the first character of a string?"
+        "- How to capitalize the first character of a string?"
       ],
       "metadata": {
         "id": "KOp4aqNez1YL"
@@ -185,7 +185,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "2. How to find the frequency of the substring in a string?"
+        "- How to find the frequency of the substring in a string?"
       ],
       "metadata": {
         "id": "gYcrwKZW0iu8"
@@ -206,7 +206,7 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "3. How to find if a string starts or ends with a specific substring?"
+        "- How to find if a string starts or ends with a specific substring?"
       ],
       "metadata": {
         "id": "Q2STTCkO0k-L"
@@ -227,7 +227,7 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "4. How to find the index of a specific character in a string?"
+        "- How to find the index of a specific character in a string?"
       ],
       "metadata": {
         "id": "N1ko6f9u0qXA"
@@ -248,7 +248,7 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "5. How to convert a string into lower case and upper case characters?\n"
+        "- How to convert a string into lower case and upper case characters?\n"
       ],
       "metadata": {
         "id": "VWIn_WJp0s0R"
@@ -269,7 +269,7 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "6. How to remove spaces from a string?"
+        "- How to remove spaces from a string?"
       ],
       "metadata": {
         "id": "OoyvIzgX0xgK"
@@ -290,7 +290,7 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "7. How to replace a substring inside a string?\n"
+        "- How to replace a substring inside a string?\n"
       ],
       "metadata": {
         "id": "2nv15dSl0z1B"
@@ -310,8 +310,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "\n",
-        "8. How to find the presence of an alphanumeric character, alphabet or digit?"
+        "- How to find the presence of an alphanumeric character, alphabet or digit?"
       ],
       "metadata": {
         "id": "PRL4pSo402h9"
