--- a/Lecture_3.ipynb
+++ b/Lecture_3.ipynb
@@ -85,7 +85,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,7 +150,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,7 +185,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -226,7 +226,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -275,7 +275,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -312,7 +312,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -350,7 +350,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -387,7 +387,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,7 +420,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,7 +457,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -512,7 +512,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -549,13 +549,29 @@
     {
       "cell_type": "code",
       "source": [
-        "# see lecture 4"
+        "text = \"Happy New Year\"\n",
+        "\n",
+        "print(text.find(\"p\"))\n",
+        "print(text.index(\"a\"))"
       ],
       "metadata": {
-        "id": "F2jQZws9zyNF"
+        "id": "F2jQZws9zyNF",
+        "outputId": "7081cfcf-3f09-4380-d581-44dd2b8a0fed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 12,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -570,13 +586,70 @@
     {
       "cell_type": "code",
       "source": [
-        "# see lecture 4"
+        "name = \"ShakibAlHasan\"\n",
+        "\n",
+        "print(name.lower())\n",
+        "print(name.upper())"
       ],
       "metadata": {
-        "id": "5GY9xut-zyRD"
+        "id": "5GY9xut-zyRD",
+        "outputId": "c5e1d3f0-2f6d-4e83-d289-cc7ea2a9e939",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 13,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "shakibalhasan\n",
+            "SHAKIBALHASAN\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"electrical engineering\" == \"Electrical Engineering\".lower())\n",
+        "print(\"electrical engineering \".rstrip() == \"Electrical Engineering\".lower())\n",
+        "print(\"   electrical engineering\".lstrip() == \"Electrical Engineering\".lower())"
+      ],
+      "metadata": {
+        "id": "lFydnuj-5fcE",
+        "outputId": "14bc5862-fc41-40ee-8a88-a77c09752ea8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "True\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "I eat rice.\n",
+        "Eating rice regulary is not a good habit.\n",
+        "\n",
+        "eat, ate, eaten => eat\n",
+        "\n",
+        "Electrical Engineering "
+      ],
+      "metadata": {
+        "id": "2Ss7uG8X5fxE"
+      }
     },
     {
       "cell_type": "markdown",
@@ -596,7 +669,7 @@
       "metadata": {
         "id": "oRxmJdYqzyTo"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -612,13 +685,51 @@
     {
       "cell_type": "code",
       "source": [
-        "# see lecture 4"
+        "text = \"Electrical Enginering\"\n",
+        "\n",
+        "print(text.replace(\"Enginering\", \"Engineering\"))"
       ],
       "metadata": {
-        "id": "685H-nkkzyV8"
+        "id": "685H-nkkzyV8",
+        "outputId": "021855bf-08df-4942-dc03-12393d0f4f46",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 15,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Electrical Engineering\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text = \"electrical enginering\"\n",
+        "print(text.capitalize())"
+      ],
+      "metadata": {
+        "id": "KSYefQlK8l6L",
+        "outputId": "1d0a425a-690d-4e0f-a748-e2f1bb4b7bd3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Electrical enginering\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -632,13 +743,35 @@
     {
       "cell_type": "code",
       "source": [
-        "# see lecture 4"
+        "name = \"shakibalhasan\"\n",
+        "\n",
+        "print(name.isalnum())\n",
+        "print(name.isdigit())\n",
+        "print(name.isalpha())\n",
+        "print(name.isupper())\n",
+        "print(name.islower())"
       ],
       "metadata": {
-        "id": "8qsLA0ee04oR"
+        "id": "8qsLA0ee04oR",
+        "outputId": "5a965dfd-4cb7-498f-e040-98a5b034048e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 16,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n",
+            "True\n",
+            "False\n",
+            "True\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -648,7 +781,7 @@
       "metadata": {
         "id": "uuTKBjAFU2Ob"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     }
   ]
