--- a/Lecture_4.ipynb
+++ b/Lecture_4.ipynb
@@ -11,9 +11,8 @@
     "<br>Data Scientist\n",
     "<br>IDARE, Houston, TX, USA\n",
     "\n",
-    "#### Objectives:\n",
-    "1. Solution discussion of HW1 and HW2\n",
-    "2. Python Data Structure: List, tuple, dictionary, set\n",
+    "#### Objectives:\n"
+    "- Python Data Structure: List, tuple, dictionary, set\n",
     "\n",
     "#### References: \n",
     "1. List vs Tuple: Difference Between List and Tuple: https://www.upgrad.com/blog/list-vs-tuple/"
